@@ -3,17 +3,17 @@
    Scott Dattalo
 
 This file is part of gputils.
- 
+
 gputils is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation; either version 2, or (at your option)
 any later version.
- 
+
 gputils is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.
- 
+
 You should have received a copy of the GNU General Public License
 along with gputils; see the file COPYING.  If not, write to
 the Free Software Foundation, 59 Temple Place - Suite 330,
@@ -26,6 +26,6 @@ Boston, MA 02111-1307, USA.  */
 
 void directory_block(void);
 void read_block(unsigned char * block, int block_number);
-void read_directory(void);
+DirBlockInfo *read_directory(void);
 
 #endif
